--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -6,7 +6,8 @@
   user: name=python group=python
 
 - name: install pip and virtualenv
-  yum: name={{ item }} state=present
+  #yum: name={{ item }} state=present
+  action: apt install {{item}}
   with_items:
     - python-pip
     - python-virtualenv
