--- a/roles/diario-opositor-bot/meta/main.yml
+++ b/roles/diario-opositor-bot/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Diario Opositor bot
+  description: Bot that answer with similar nws
+  company: Blue Square Monster
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -52,6 +52,5 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
+dependencies:
+  - role: python
