--- a/roles/pi/tasks/main.yml
+++ b/roles/pi/tasks/main.yml
@@ -2,14 +2,18 @@
 - set_fact:
     real_ansible_host: "{{ ansible_host }}"
 
-- name: 'Configure WIFI'
-  copy: src=./wpa_supplicant.conf dest=/etc/wpa_supplicant/wpa_supplicant.conf mode=0600
+# - name: 'Configure WIFI'
+#   copy: src=./wpa_supplicant.conf dest=/etc/wpa_supplicant/wpa_supplicant.conf mode=0600
 
 - name: 'Update APT package cache'
   action: apt update_cache=yes
 
 - name: 'Upgrade APT to the lastest packages'
   action: apt upgrade=safe
+
+- name: 'Execute rpi-update'
+  command: rpi-update
+  become: true
 
 - name: 'Reboot'
   shell: sleep 2 && reboot
