--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
 
 - name: Ansible Playbook for configuring brand new Raspberry Pi
 
-  hosts: webservers
+  hosts: raspberry
   roles:
     - pi
   remote_user: pi
