--- a/roles/pi/tasks/main.yml
+++ b/roles/pi/tasks/main.yml
@@ -6,10 +6,12 @@
 #   copy: src=./wpa_supplicant.conf dest=/etc/wpa_supplicant/wpa_supplicant.conf mode=0600
 
 - name: 'Update APT package cache'
-  action: apt update_cache=yes
+  apt:
+    update_cache: yes
 
 - name: 'Upgrade APT to the lastest packages'
-  action: apt upgrade=safe
+  apt:
+    ugrade: yes
 
 - name: 'Execute rpi-update'
   command: rpi-update
